config/watcher/gateway.yaml
# Use this Gateway for setup with watcher enabled if there is no istio gateway configured
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: watcher-gateway
  labels:
    operator.kyma-project.io/watcher-gateway: default
  annotations:
    # When the client connection is mTLS, reset the XFCC header with the client certificate information and send it to the next hop.
    # This is being used to verify incoming requests
    "proxy.istio.io/config": '{"gatewayTopology" : { "forwardClientCertDetails": "SANITIZE_SET" } }'
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - 'listener.cp.kyma.cloud.sap'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: gateway-secret
        mode: MUTUAL
